[gd_scene load_steps=6 format=3 uid="uid://c5ubh0h1jqubt"]

[ext_resource type="FontFile" uid="uid://dq83y3i8frkqq" path="res://Maps/Crypt1/Dialogues/Fonts/GIMENELL.TTF" id="1_ixs3w"]
[ext_resource type="Script" path="res://Maps/Crypt1/Dialogues/Messages/Coffin.gd" id="1_rnsik"]
[ext_resource type="Texture2D" uid="uid://ctkqsd7gyqgvm" path="res://Maps/Crypt1/Assets/Crypt32x32/RA_Crypt.png" id="2_y2l72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptikh"]
size = Vector2(32, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_1j5s3"]
radius = 64.0078

[node name="Coffin" type="StaticBody2D"]
script = ExtResource("1_rnsik")

[node name="Coffin" type="Sprite2D" parent="."]
texture = ExtResource("2_y2l72")
hframes = 32
vframes = 8
frame = 213

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ptikh")

[node name="InteractionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
shape = SubResource("CircleShape2D_1j5s3")

[node name="Message1" type="Panel" parent="."]
visible = false
offset_left = -76.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -27.0

[node name="Label" type="Label" parent="Message1"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 149.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("1_ixs3w")
theme_override_font_sizes/font_size = 16
text = "Use A.W.S.D to move"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="InteractionZone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_area_2d_body_exited"]
